Creating a project Layout

--- a/account.html
+++ b/account.html
@@ -11,7 +11,7 @@
   </head>
   <body>
       <header>
-        <img src="./img/logo.png" alt="Header logo"/>
+        <img src="" alt="Header logo"/>
         <a href="">Home</a>
         <a href="">Shop</a>
         <a href="">My Account</a>
